# simple-message-queue

./: CMakeLists.txt  README.md  boost_client.cpp  boost_server.cpp  chat_msgq.cpp  client.cpp  client_consumer.cpp  client_consumer.hpp  client_consumer_test.cpp  client_consumer_test.hpp  client_consumer_test2.cpp  client_consumer_test3.cpp  client_custom.cpp  client_producer.cpp  client_producer.hpp  client_producer_test.cpp  custom_msgq.cpp  define.hpp  file_manager.hpp  file_manager_builder.hpp  main.cpp  msgq-1.cpp  msgq-2.cpp  msgq_all.cpp  poll_test.cpp  server.cpp  server_consumer.hpp  server_producer.hpp  simplemsgq.hpp  structtest.cpp
EventCLoop/: Acceptor.hpp  Epoll.hpp  Error.hpp  Event.hpp  EventCLoop.hpp  Eventfd.hpp  Signal.hpp  TcpBuffer.hpp  TcpConnect.hpp  TcpConnector.hpp  TcpSession.hpp  Timer.hpp
simple-message-queue/: client_consumer.hpp  client_producer.hpp  define.hpp  file_manager.hpp  file_manager_builder.hpp  server_consumer.hpp  server_producer.hpp  simplemsgq.hpp  simplemsgq_asio_acceptor.hpp  simplemsgq_asio_chat_session.hpp  simplemsgq_asio_client.hpp  simplemsgq_asio_custom_session.hpp  simplemsgq_asio_interface.hpp  simplemsgq_client.hpp  simplemsgq_client_consumer.hpp  simplemsgq_client_producer.hpp  simplemsgq_define.hpp  simplemsgq_file_inserter.hpp  simplemsgq_file_manager.hpp  simplemsgq_file_manager_builder.hpp  simplemsgq_file_selecter.hpp  simplemsgq_server_acceptor.hpp  simplemsgq_server_acceptor2.hpp  simplemsgq_server_session.hpp  simplemsgq_server_session2.hpp  simplemsgq_simqclient.hpp  simplemsgq_worker_consumer.hpp  simplemsgq_worker_interface.hpp  simplemsgq_worker_producer.hpp
simplemsgq/: simplemsgq.hpp
